# AIAS_LAB27

./: .editorconfig  .gitignore  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  README.md  makefile
chisel_impl/src/main/resource/: data.hex  inst.asm  inst.hex
cmake/: Utility.cmake
codegen/: README.md  example.json  example.py  gen.py  scriptgen.py  soc.json
codegen/acalsim/: BaseGen.py  CodeGen.py  SimBase.py  SimChannel.py  SimModule.py  SimPort.py  SimTop.py  __init__.py  util.py
codegen/acalsim/template/cc/: TCCMain.cc  TCCSimBase.cc  TCCSimBase.hh  TCCSimModule.cc  TCCSimModule.hh  TCCSimTop.cc  (+3 more)
emulator/: .gitignore  Makefile  emulator.cpp  golden.txt  linenoise.hpp  load_store_simple.txt
gtest/: CMakeLists.txt
include/: SOCSimulator.hh
libs/: CMakeLists.txt  SOCSimulator.cc
scripts/: acalsim_template.py  regression.py
src/: CMakeLists.txt
src/app_soc/: CMakeLists.txt  configs.json  main.cc
src/app_soc/asm/: load_store_simple.txt  test.txt
src/app_soc/include/: BaseMemory.hh  CPU.hh  CPUDefs.hh  CPUSingleIterationEvent.hh  DataMemory.hh  EXEStage.hh  IDStage.hh  IFStage.hh  InstMemory.hh  MEMStage.hh  MemProcessEvent.hh  Register.hh  Register.inl  SOCConfig.hh  SOCSimTop.hh  WBStage.hh
src/app_soc/include/packet/: MemReqPacket.hh  MemRespPacket.hh
src/app_soc/libs/: BaseMemory.cc  CMakeLists.txt  CPU.cc  CPUSingleIterationEvent.cc  DataMemory.cc  EXEStage.cc  IDStage.cc  IFStage.cc  InstMemory.cc  MEMStage.cc  MemProcessEvent.cc  SOCSimTop.cc  WBStage.cc
src/app_soc/libs/packet/: MemReqPacket.cc  MemRespPacket.cc
src/riscv/: CMakeLists.txt  configs.json  main.cc
src/riscv/asm/: branch_simple.txt  full_test.txt  matmul16.txt  matmul2.txt  matmul32.txt  matmul4.txt  matmul8.txt  test2.txt  test3.txt  test4.txt  test5.txt
src/riscv/include/: BaseMemory.hh  CPU.hh  DEStage.hh  DMA.hh  DataMemory.hh  DataStruct.hh  EXEStage.hh  Emulator.hh  IDStage.hh  IFStage.hh  InstPacket.hh  InstrParse.hh  MEMStage.hh  MemPacket.hh  SOC.hh  SOCTop.hh  SystemConfig.hh  SystolicArray.hh  TopPipeRegisterManager.hh  WBStage.hh
src/riscv/libs/: CMakeLists.txt  CPU.cc  DMA.cc  DataMemory.cc  EXEStage.cc  Emulator.cc  IDStage.cc  IFStage.cc  InstPacket.cc  InstrParse.cc  MEMStage.cc  MemPacket.cc  SOC.cc  SystolicArray.cc  TopPipeRegisterManager.cc
(+51 files in other folders)
